--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# default ignores
 /node_modules
 /public/hot
 /public/storage
@@ -10,3 +11,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+
+# ignore Desktop Services Store
+.DS_Store
+/.DS_Store
